# 3d-in-console

./: 3d in console.sln  3d in console.vcxproj  CMakeLists.txt  main.cpp
